Produkt-Lang-Beschreibung nun als Markdown

--- a/src/main/resources/static/tagebau/product.xhtml
+++ b/src/main/resources/static/tagebau/product.xhtml
@@ -131,9 +131,9 @@
         <div class="panel pad" style="margin-top:12px">
           <div style="font-weight:900">Long Description (Markdown)</div>
           <div class="muted" style="font-size:12px; margin-top:4px">
-            Wird 1:1 aus <code>longDescriptionMarkdown</code> angezeigt (später: Markdown-Rendering möglich).
+            Wird aus <code>longDescriptionMarkdown</code> als HTML gerendert (Markdown).
           </div>
-          <pre class="markdown-box" data-product-longdesc="true">—</pre>
+          <div class="markdown-render" data-product-longdesc="true">—</div>
         </div>
 
         <div class="panel pad" style="margin-top:12px">
