--- a/src/main/resources/static/tagebau/product.xhtml
+++ b/src/main/resources/static/tagebau/product.xhtml
@@ -118,23 +118,6 @@
             <span class="chip" data-product-leadtime="true">Lieferzeit: —</span>
           </div>
         </div>
-      </div>
-
-      <!-- RIGHT: Details / Specs / Inquiry -->
-      <div>
-        <div class="kicker">Technische Daten</div>
-
-        <div class="specs-grid" id="specsGrid" data-dyn-specs="true">
-          <!-- JS fills specs as cards -->
-        </div>
-
-        <div class="panel pad" style="margin-top:12px">
-          <div style="font-weight:900">Long Description (Markdown)</div>
-          <div class="muted" style="font-size:12px; margin-top:4px">
-            Wird aus <code>longDescriptionMarkdown</code> als HTML gerendert (Markdown).
-          </div>
-          <div class="markdown-render" data-product-longdesc="true">—</div>
-        </div>
 
         <div class="panel pad" style="margin-top:12px">
           <div style="font-weight:900">Anfrage senden</div>
@@ -163,6 +146,27 @@
             <span class="muted" style="font-size:12px" data-inquiry-status="true"></span>
           </div>
         </div>
+      </div>
+
+      <!-- RIGHT: Details / Specs / Inquiry -->
+      <div>
+        <div class="kicker">Technische Daten</div>
+
+        <div class="specs-grid" id="specsGrid" data-dyn-specs="true">
+          <!-- JS fills specs as cards -->
+        </div>
+
+        <div class="panel pad" style="margin-top:12px">
+          <div style="font-weight:900">Beschreibung</div>
+          <div class="muted" style="font-size:12px; margin-top:4px">
+            Wird aus <code>longDescriptionMarkdown</code> als HTML gerendert (Markdown).
+          </div>
+          <div class="markdown-render" data-product-longdesc="true">—</div>
+        </div>
+
+        <!--
+        Anfrage ist umgezogen
+        -->
 
         <div class="panel pad" style="margin-top:12px">
           <div style="display:flex; justify-content:space-between; align-items:flex-end; gap:10px">
